...
                android:foregroundTint="@color/white"
                android:textColorHint="@color/tile_bkgnd_gray"
                android:theme="@style/textInputStyle"
                android:layout_marginTop="150dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
...
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/action_sign_in_short"
                android:background="@drawable/buttonclick"
                android:textStyle="bold"
...
