...
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/new_game_btn_text"
            android:background="@drawable/buttonclick"
            android:id="@+id/classicButton"
            android:layout_marginBottom="20dp"
            android:onClick="newGameButtonClickedUnfinished"
            />

        <Button
            android:layout_width="match_parent"
...
