<resources>
    <string name="app_name">Tetravex</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Enter username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="new_user_added">New User Added</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_alphabetical_characters_only">Alphabetical characters only</string>
    <string name="error_username_too_short">Username minimum 3 characters</string>
    <string name="error_username_too_long">Username maximum 10 characters</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_settings">Settings</string>

    <string name="classic">Classic</string>
    <string name="time_trial">Time Trial</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="arcade">Arcade</string>
    <string name="text_new_game_btn">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="discard_puzzle">Discard Puzzle</string>


    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_reset_scores_prompt">Reset high scores?</string>
    <string name="dialog_quit_game_prompt">Quit current game?</string>
    <string name="dialog_quit_game">Exit Game?</string>
    <string name="dialog_restart_game">Reset Puzzle</string>
    <string name="scores_deleted">Scores deleted</string>
    <string name="dialog_exit_to_login">Exit to login screen?</string>


    <!-- In Game -->
    <string name="puzzle_complete">Puzzle Complete</string>
    <string name="puzzle_failed">Puzzle Failed</string>
    <string name="number_puzzles_completed">No puzzles Completed</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="help">Help</string>
    <string name="dialog_enter_settings_page">Settings page will reset puzzle</string>
    <string name="game_over">Game Over!</string>
    <string name="puzzles_completed">Puzzles Completed = </string>
    <string name="puzzles_completed_value">0</string>
    <string name="pause">Pause</string>


    <!-- How To -->
    <string name="how_to_time_trial">Time Trial - Complete the puzzle before the timer runs out. Move the tiles from right to left, matching each edge of the tile with the edges of the other tiles.</string>
    <string name="how_to_classic">Classic - Complete the puzzle as quickly as you can. Move the tiles from right to left, matching each edge of the tile with the edges of the other tiles.</string>
    <string name="how_to_arcade">Arcade - Complete as many puzzles as possible before the timer runs out. Move the tiles from right to left, matching each edge of the tile with the edges of the other tiles.</string>
    <string name="help_button">Help ?</string>


    <!--Paused -->
    <string name="paused">Paused</string>
    <string name="resume_btn_text">Resume puzzle</string>
    <string name="quit_btn_text">Discard puzzle</string>

    <!--Leaderboard -->
    <string name="username">Username</string>
    <string name="time">Time</string>
    <string name="date">Date/Time</string>
    <string name="unfinished">Unfinished</string>
    <string name="unfinished_leaderboard">Unfinished Puzzles</string>
    <string name="remove_all_scores">Remove All Scores</string>
    <string name="leader_board_how_to">Leaderboard displays top scores in order. Information displayed depends on current settings. To change just select different values for difficulty or grid size.</string>

    <!-- Dashboard -->
    <string name="dashboard_title" translatable="false">Tetravex</string>
    <string name="new_game_btn_text">New puzzle</string>
    <string name="scores_btn_text">Scores</string>
    <string name="settings_btn_text">Settings</string>
    <string name="howto_btn_text">How to play</string>


    <!-- Settings -->
    <string name="pref_size_key" translatable="false">pref_size_list</string>
    <string name="pref_color_key" translatable="false">pref_color_tiles</string>
    <string name="pref_difficulty_key" translatable="false">pref_difficulty_list</string>
    <string name="pref_shape_key" translatable="false">pref_shape_list</string>
    <string name="pref_colour_key" translatable="false">pref_colour_list</string>

    <string name="title_color_tiles">Colored tiles</string>
    <string name="description_color_tiles">Each tile number has its own color</string>

    <string name="title_colour">Colour</string>
    <string name="normal">Normal</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>

    <string-array name="colour_list">
        <item>@string/normal</item>
        <item>@string/blue</item>
        <item>@string/red</item>
    </string-array>

    <string-array name="colour_list_values">
        <item>Normal</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>

    <string name="title_size">Size</string>
    <string name="two_x_two" translatable="false">2 x 2</string>
    <string name="three_x_three" translatable="false">3 x 3</string>
    <string name="four_x_four" translatable="false">4 x 4</string>
    <string name="five_x_five" translatable="false">5 x 5</string>

    <string-array name="size_list" translatable="false">
        <item>@string/two_x_two</item>
        <item>@string/three_x_three</item>
        <item>@string/four_x_four</item>
        <item>@string/five_x_five</item>
    </string-array>
    <string-array name="size_list_values" translatable="false">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_game_shape">Shape</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
    <string name="hexagon">Hexagon</string>

    <string-array name="shape_list" translateable="false">
        <item>@string/square</item>
        <item>@string/triangle</item>
        <item>@string/hexagon</item>
    </string-array>

    <string-array name="shape_list_values" translateable="false">
        <item>Square</item>
        <item>Triangle</item>
        <item>Hexagon</item>
    </string-array>

    <string name="title_difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string-array name="difficulty_list" translateable="false">
        <item>@string/easy</item>
        <item>@string/medium</item>
        <item>@string/hard</item>
    </string-array>

    <string-array name="difficulty_list_values" translateable="false">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="title_activity_classic">Classic</string>
    <string name="title_activity_how_to">Help</string>
    <string name="tetravex">Tetravex</string>
    <string name="textview">TextView</string>


</resources>
