<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andware.tetravex.MainMenu">

    <Space
        android:id="@+id/top_margin"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentTop="true" />

    <Space
        android:id="@+id/bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true" />

    <Space
        android:id="@+id/left_margin"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true" />

    <Space
        android:id="@+id/right_margin"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:layout_above="@id/bottom_margin"
        android:layout_below="@id/top_margin"
        android:layout_toRightOf="@id/left_margin"
        android:layout_toLeftOf="@id/right_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/classic"
            android:background="@drawable/buttonclick"
            android:id="@+id/classicButton"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeTrialButton"
            android:textSize="25sp"
            android:text="@string/time_trial"
            android:background="@drawable/buttonclick"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arcade"
            android:id="@+id/unknownTitleButton"
            android:background="@drawable/buttonclick"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:textSize="25sp"
            android:background="@drawable/buttonclick"
            android:id="@+id/leaderboardButton"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonclick"
            android:text="@string/settings"
            android:id="@+id/settingsButton"
            android:textSize="25sp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="25sp"
            android:background="@drawable/buttonclick"
            android:id="@+id/exitMainButton" />

    </LinearLayout>


</RelativeLayout>
